# django-simple-invoices

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Pipfile  manage.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
calendar_filter/: admin.py  apps.py  models.py  urls.py  views.py
calendar_filter/migrations/: 0001_initial.py
calendar_filter/templates/calendar_filter/: calendar.html
core/: settings.py  urls.py
invoices/: admin.py  managers.py  models.py  pdf_generator.py  urls.py  views.py
invoices/lib/: pdf_generator.py  pdf_styles.py
invoices/migrations/: 0001_initial.py  0001_squashed_0010_remove_hourlyservice_hours.py  0002_auto_20151218_1830.py  0002_auto_20171224_2010.py  0002_auto_20220314_0927.py  0002_credit.py  0002_invoice_uuid.py  0003_auto_20151218_1838.py  0003_invoice_public.py  0003_invoice_total.py  0004_auto_20151218_1747.py  0004_delete_vendor.py  0004_invoice_description.py  0005_auto_20160223_1125.py  0005_vendor.py  0006_auto_20151218_1907.py  0006_auto_20160223_1132.py  0007_auto_20160223_1133.py  0007_invoice_vendor.py  0008_auto_20151218_1911.py  0008_relatedpdf_description.py  0009_auto_20161214_1446.py  0009_vendor_checks_payable_to.py  0010_remove_hourlyservice_hours.py  0011_auto_20171224_1941.py  0012_auto_20171224_1941.py  0013_auto_20171224_1956.py
invoices/templates/admin/invoices/invoice/: change_form.html
peacock_invoices/: settings.py  urls.py  wsgi.py
