[tool.poetry]
name = "peacockhosting-apps"
version = "0.1.0"
description = ""
authors = ["Adam Peacock <adam@thepeacock.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^3.2.15"
django-storages = "^1.11.1"
reportlab = "^3.6.1"
psycopg2 = "^2.9.9"
PyPDF2 = "^1.26.0"
Pillow = "^9.0.1"
django-environ = "*"
django-admin-sortable2 = "^1.0"
whitenoise = "^6.0.0"
gunicorn = "^20.1.0"
uvicorn = "^0.18.3"
django-lb-health-check = "^1.0.1"
requests = "^2.28.1"
icalendar = "^4.1.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
rope = "^0.23.0"
pylint = "^2.10.2"
pytest = "^7.1.0"
pytest-django = "^4.4.0"
django-debug-toolbar = "^3.2.2"
ipython = "^8.1.1"
pylint-django = "^2.4.4"
mypy = "^0.941"
black = "^22.1.0"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.28.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
