[tool.pdm]
package-type = "application"

[project]
name = "peacockhosting-apps"
version = "0.1.0"
description = ""
authors = [{ name = "Adam Peacock", email = "adam@thepeacock.net" }]
dependencies = [
    "Django<5.0.0,>=4.2.0",
    "django-storages<2.0.0,>=1.11.1",
    "reportlab<4.0.0,>=3.6.1",
    "PyPDF2<2.0.0,>=1.26.0",
    "Pillow<11.0.0,>=10.1.0",
    "django-environ",
    "django-admin-sortable2<3.0,>=2.1",
    "whitenoise<7.0.0,>=6.0.0",
    "django-lb-health-check<2.0.0,>=1.0.1",
    "requests<3.0.0,>=2.28.1",
    "icalendar<5.0.0,>=4.1.0",
]
requires-python = ">=3.12,<4.0"
license = { text = "MIT" }


[tool.pdm.dev-dependencies]
dev = ["types-requests<3.0.0,>=2.28.11", "ruff<1.0.0,>=0.1.6"]

[tool.pdm.build]
includes = []
